<resources>
    <string name="app_name">Class Manager</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="reg_no">Registration Number</string>
    <string name="institute">Institute</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="btn_update">Update</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out">Logout</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_class">Create Class</string>
    <string name="title">Title :</string>
    <string name="class_key_will_be_shown_here">Class Key Wil Be Shown Here</string>
    <string name="enter_here">enter here</string>
    <string name="choose_option">Choose Option</string>
    <string name="action_save">Update</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="allot_marks">Allot\nMarks</string>
    <string name="marks">Marks</string>
    <string name="curr_attend">Current\nAttendance</string>
    <string name="mark_pre">Mark\nPresent</string>
    <string name="curr_marks">Current\nMarks</string>
    <string name="uploadImage">Upload</string>
    <string name="send">send</string>
    <string name="upload_image">Upload Image</string>
    <string name="todo">TODO</string>
    <string name="manager">Manager</string>
    <string name="classes">Class</string>
    <string name="btn_link_to_register_in">Not Registered?</string>
</resources>
