<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".activities.CreateClassActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="43dp"
        android:layout_width="123dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/titleCreateClassEditText"
        android:textSize="30sp"
        android:text="@string/title"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="94dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/titleCreateClassTextView"/>

    <EditText
        android:id="@+id/titleCreateClassEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/enter_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/createClassBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleCreateClassTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createClassBtn"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="50dp"
        android:onClick="createNewClass"
        android:text="@string/create_class"
        app:layout_constraintBottom_toTopOf="@+id/keyCreateClassTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateClassTextView" />

    <TextView
        android:id="@+id/keyCreateClassTextView"
        android:layout_width="289dp"
        android:layout_height="136dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/class_key_will_be_shown_here"
        android:textColor="#213DF3"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createClassBtn" />

    <TextView
        android:id="@+id/courseTitleTextView"
        android:layout_width="287dp"
        android:layout_height="66dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#009667"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/keyCreateClassTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createClassBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>